KIBON-1585: fix spacing

--- a/ebegu-web/src/app/core/new-antrag-list/new-antrag-list.component.less
+++ b/ebegu-web/src/app/core/new-antrag-list/new-antrag-list.component.less
@@ -163,7 +163,7 @@ mat-cell {
     height: 6rem;
     line-height: 3rem;
     overflow: hidden;
-    padding: 0 0.8rem 0;
+    padding: 0 0.25rem 0;
     position: relative;
     text-overflow: ellipsis;
     vertical-align: middle;
@@ -172,6 +172,12 @@ mat-cell {
     // we need to declare this additionally in important because there is a global style that would otherwise overwrite
     // this and I don't konw where the global is applied and if we could remove it instead
     font-size: 1.4rem !important;
+
+    span:first-child {
+        margin: 0 calc(0.8rem - 0.25rem) 0;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 mat-cell.mat-cell, mat-header-cell.mat-header-cell, mat-footer-cell {
@@ -195,7 +201,7 @@ mat-cell.mat-cell, mat-header-cell.mat-header-cell, mat-footer-cell {
 
 .mat-column-status, .mat-column-status-filter {
     flex: 3 1 !important;;
-    min-width: 0% !important;;
+    min-width: 0 !important;;
 }
 
 .mat-column-dokumenteHochgeladen, .mat-column-dokumente-hochgeladen-filter {
@@ -205,22 +211,22 @@ mat-cell.mat-cell, mat-header-cell.mat-header-cell, mat-footer-cell {
 
 .mat-column-institution, .mat-column-institutionen-filter {
     flex: 4 1 !important;;
-    min-width: 0% !important;;
+    min-width: 0 !important;;
 }
 
 .mat-column-angebot, .mat-column-angebote-filter {
     flex: 4 1 !important;;
-    min-width: 0% !important;;
+    min-width: 0 !important;;
 }
 
 .mat-column-verantwortlicheTS, .mat-column-verantwortlich-TS {
     flex: 3 1 !important;;
-    min-width: 0% !important;;
+    min-width: 0 !important;;
 }
 
 .mat-column-verantwortlicheBG, .mat-column-verantwortlich-BG {
     flex: 3 1 !important;;
-    min-width: 0% !important;;
+    min-width: 0 !important;;
 }
 
 mat-cell.mat-cell:last-of-type {
@@ -261,4 +267,8 @@ mat-table > mat-header-row:nth-of-type(2) > mat-header-cell > mat-form-field > .
 
 .pointer-cursor {
     cursor: pointer;
+}
+
+mat-row mat-cell:first-of-type {
+    padding-left: .8rem;
 }
